--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body, html {
 
     <div class="w3-col m3">
         <p class="w3-center"><em>Exeter book riddles</em></p><br>
-      <img src="images/riddles.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="I found these quite interesting to read and reminded me a lot of the Riddles in the Dark chapter in The Hobbit. In fact, to promote the movie, they launched a website where you could solve riddles by Gollum: https://apps.warnerbros.com/thehobbit/riddles/us/ (The website was taken down sometime last year)">s (100% width) -->
+      <img src="images/riddles.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="I found these quite interesting to read and reminded me a lot of the Riddles in the Dark chapter in The Hobbit. In fact, to promote the movie, they launched a website where you could solve riddles by Gollum: https://apps.warnerbros.com/thehobbit/riddles/us/ (The website was taken down sometime last year)">
     </div>
 
     <div class="w3-col m3">
@@ -181,7 +181,7 @@ body, html {
 
     <div class="w3-col m3">
         <p class="w3-center"><em>The book of Margery Kempe (2)</em></p><br>
-      <img src="images/kempe2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="I found this timeline of Margery Kempe's life which I found to be interesting. https://www.worldhistory.org/timeline/Margery_Kempe/">
+      <img src="images/kempe2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="I found this timeline of Margery Kempe's life which I found to be interesting. https://www.worldhistory.org/timeline/Margery_Kempe/ I found it to be especially interesting as to how much she travelled in her later life, even going to Rome!">
     </div>
 
     <div class="w3-col m3">
