--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body, html {
 
     <div class="w3-col m3">
         <p class="w3-center"><em>Marie the France - Lanval</em></p><br>
-      <img src="images/lanval.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lanval">
+      <img src="images/lanval.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="I tried to read through the French version of the text as I had taken 5 years of french class in school and wanted to see how much I understood it. While I could understand some of it, I was moreso drawn toward the rhyming scheme that is inevitably lost in the English translation. The French text uses a simple AABB rhyming scheme and found it to be really impressive that Marie de France sticks to that scheme for the entire text.">
     </div>
 
     <div class="w3-col m3">
